fix(glob101): fix flex-wrap

--- a/apps/web-glob101/src/app/features/home/components/home.component.scss
+++ b/apps/web-glob101/src/app/features/home/components/home.component.scss
@@ -77,3 +77,11 @@ fieldset {
     flex-grow: 1;
   }
 }
+
+.test-strings {
+  flex-grow: 4;
+}
+
+.explanation {
+  flex-grow: 1;
+}
