--- a/apps/web-glob101/src/scss/_variables.scss
+++ b/apps/web-glob101/src/scss/_variables.scss
@@ -25,8 +25,8 @@ $gray: #9a9a9a;
 // $dark-primary-transparent: rgba($dark-primary, 0.2);
 $dark-accent-transparent: rgba($dark-accent, 0.2);
 
-$background-color: #fafafa;
-$dark-background-color: #303030;
+$background-color: #e3e3ef;
+$dark-background-color: #30303f;
 
 :root,
 .light-theme {
